--- a/medial-queries1/main.css
+++ b/medial-queries1/main.css
@@ -1,3 +1,33 @@
 body {
   background: blanchedalmond;
+  font-size: 3rem;
+}
+
+/* Notes:
+flex-direction: https://developer.mozilla.org/en-US/docs/Web/CSS/flex-direction
+row-gap: https://developer.mozilla.org/en-US/docs/Web/CSS/row-gap
+*/
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  border: 1px solid green;
+  row-gap: 0.25rem;
+  padding: 0.25rem;
+}
+
+.container div {
+  border: 1px solid black;
+  background-color: lightgray;
+  text-align: center;
+}
+
+.a,
+.c {
+  height: 10vh;
+}
+
+.b {
+  height: 20vh;
+  vertical-align: middle;
 }
